--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>hudi052</module>
         <module>hudi-by-flink</module>
         <module>hudi-by-spark</module>
+        <module>iceberg-by-spark</module>
     </modules>
 
     <name>DataLakes</name>
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <hadoop.version>1.6.0-cdh5.16.2</hadoop.version>
+        <hadoop.version>2.6.0-cdh5.16.2</hadoop.version>
         <spark.version>2.4.0.cloudera2</spark.version>
         <scope.value>provided</scope.value>  <!-- compile, provided -->
     </properties>
@@ -68,178 +68,127 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-yarn -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-yarn_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
-            <version>${spark.version}</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-core &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-core_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-sql &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-sql_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-hive &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-hive_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-streaming &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-streaming_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-yarn &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-yarn_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-mllib &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-mllib_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    <scope>provided</scope>-->
+        <!--</dependency>-->
 
-        <!-- DataLakes Apache Hudi-->
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-avro -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-avro_2.11</artifactId>
-            <version>${spark.version}</version>
-            <!--<scope>provided</scope>-->
-        </dependency>
+        <!--&lt;!&ndash; DataLakes Apache Hudi&ndash;&gt;-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-avro &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.spark</groupId>-->
+        <!--    <artifactId>spark-avro_2.11</artifactId>-->
+        <!--    <version>${spark.version}</version>-->
+        <!--    &lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.6.0-cdh5.16.2</version>
+            <version>${hadoop.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-yarn-api -->
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-yarn-client</artifactId>
-            <version>2.6.0-cdh5.16.2</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-yarn-server-resourcemanager -->
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-yarn-server-resourcemanager</artifactId>
-            <version>2.6.0-cdh5.16.2</version>
-        </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-yarn-api &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.hadoop</groupId>-->
+        <!--    <artifactId>hadoop-yarn-client</artifactId>-->
+        <!--    <version>${hadoop.version}</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-yarn-server-resourcemanager &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--    <groupId>org.apache.hadoop</groupId>-->
+        <!--    <artifactId>hadoop-yarn-server-resourcemanager</artifactId>-->
+        <!--    <version>${hadoop.version}</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+
             <plugins>
+                <!-- 打包不带依赖包 -->
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <configuration>
-                        <descriptorRefs>
-                            <descriptorRef>jar-with-dependencies</descriptorRef>
-                        </descriptorRefs>
-                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <!--<configuration>-->
+                    <!--    <descriptorRefs>-->
+                    <!--        <descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--    </descriptorRefs>-->
+                    <!--</configuration>-->
                 </plugin>
-                <!--clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle-->
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-                <plugin>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.7.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.0.0</version>
-                </plugin>
+
+                <!-- 打包带依赖包 -->
+                <!-- <plugin>-->
+                <!--     <groupId>org.apache.maven.plugins</groupId>-->
+                <!--     <artifactId>maven-assembly-plugin</artifactId>-->
+                <!--     <executions>-->
+                <!--         <execution>-->
+                <!--             <id>make-assembly</id>-->
+                <!--             <phase>package</phase>-->
+                <!--             <goals>-->
+                <!--                 <goal>single</goal>-->
+                <!--             </goals>-->
+                <!--         </execution>-->
+                <!--     </executions>-->
+                <!--     <configuration>-->
+                <!--         <descriptors>-->
+                <!--             <descriptor>assembly.xml</descriptor>-->
+                <!--         </descriptors>-->
+                <!--         &lt;!&ndash;<archive>&ndash;&gt;-->
+                <!--         &lt;!&ndash;    <manifest>&ndash;&gt;-->
+                <!--         &lt;!&ndash;        <addClasspath>true</addClasspath>&ndash;&gt;-->
+                <!--         &lt;!&ndash;    </manifest>&ndash;&gt;-->
+                <!--         &lt;!&ndash;</archive>&ndash;&gt;-->
+                <!--         &lt;!&ndash;<finalName>${project.artifactId}-${project.version}-with-dependency</finalName>&ndash;&gt;-->
+                <!--     </configuration>-->
+                <!-- </plugin>-->
             </plugins>
         </pluginManagement>
-
-        <!-- 打包不带依赖包 -->
-        <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <!--<configuration>-->
-                <!--    <descriptorRefs>-->
-                <!--        <descriptorRef>jar-with-dependencies</descriptorRef>-->
-                <!--    </descriptorRefs>-->
-                <!--</configuration>-->
-            </plugin>
-        </plugins>
-
-        <!-- 打包带依赖包 -->
-        <!--<plugins>-->
-        <!--    <plugin>-->
-        <!--        <groupId>org.apache.maven.plugins</groupId>-->
-        <!--        <artifactId>maven-assembly-plugin</artifactId>-->
-        <!--        <executions>-->
-        <!--            <execution>-->
-        <!--                <id>make-assembly</id>-->
-        <!--                <phase>package</phase>-->
-        <!--                <goals>-->
-        <!--                    <goal>single</goal>-->
-        <!--                </goals>-->
-        <!--            </execution>-->
-        <!--        </executions>-->
-        <!--        <configuration>-->
-        <!--            <descriptors>-->
-        <!--                <descriptor>assembly.xml</descriptor>-->
-        <!--            </descriptors>-->
-        <!--            &lt;!&ndash;<archive>&ndash;&gt;-->
-        <!--            &lt;!&ndash;    <manifest>&ndash;&gt;-->
-        <!--            &lt;!&ndash;        <addClasspath>true</addClasspath>&ndash;&gt;-->
-        <!--            &lt;!&ndash;    </manifest>&ndash;&gt;-->
-        <!--            &lt;!&ndash;</archive>&ndash;&gt;-->
-        <!--            &lt;!&ndash;<finalName>${project.artifactId}-${project.version}-with-dependency</finalName>&ndash;&gt;-->
-        <!--        </configuration>-->
-        <!--    </plugin>-->
-        <!--</plugins>-->
-
     </build>
+
 </project>
